--- a/UnitConverterBackEnd/src/main/resources/application.properties
+++ b/UnitConverterBackEnd/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=UnitConverterBackEnd
+springdoc.show-actuator=true
+springdoc.swagger-ui.disable-swagger-default-url=true
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.packages-to-scan=org.example.unitconverterbackend.controllers
